<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <TextView
        android:id="@+id/lblPatientName"
        style="@style/header_style"
        android:gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <TextView
        android:id="@+id/lblPatientAgeGender"
        style="@style/text_view_style"
        android:gravity="center"
        android:layout_marginBottom="5dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="5dp"
            android:padding="5dp"
            android:background="@drawable/bg_shape_medical_details"
            android:shrinkColumns="*"
            android:stretchColumns="2">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_date_of_examination" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtDOE"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_diagnosis" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtDiagnosis"
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:imeOptions="actionNext"
                    android:inputType="textCapSentences" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_visit_type" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtVisitType"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_weight" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtWeight"
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_blood_pressure" />
                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtBP"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_hemoglobin" />
                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtHemoglobin"
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_bld_glucose_random" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtBldGlucose"
                    style="@style/edit_text_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_hiv" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtHiv"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_hbsag" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtHbsag"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:gravity="center_vertical">
                <TextView
                    style="@style/text_view_style"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:text="@string/lbl_final_tags" />

                <TextView
                    style="@style/text_view_style"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:layout_gravity="center"
                    android:text="@string/colon_str" />

                <EditText
                    android:id="@+id/txtFinalTags"
                    style="@style/edit_text_style"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:gravity="left"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:inputType="number" />
            </TableRow>
            <TableRow
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnOk"
                    style="@style/button_style"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginRight="10dp"
                    android:text="@string/lbl_ok" />

            </TableRow>

        </TableLayout>
    </ScrollView>
</LinearLayout>