<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:padding="20dp">
    <RelativeLayout
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/llbtnContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="10dp"
            android:gravity="center">

            <Button
                android:id="@+id/btnSignIn"
                style="@style/button_style"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/btn_lbl_sign_in" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llPwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llbtnContainer"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/lock" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">
                <EditText
                    android:id="@+id/txtPwd"
                    style="@style/edit_text_style"
                    android:layout_width="200dp"
                    android:hint="@string/lbl_prompt_pwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:maxLength="15" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llPwd"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/user_name" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="200dp"
                    android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/txtUserName"
                    style="@style/edit_text_style"
                    android:layout_width="200dp"
                    android:cursorVisible="true"
                    android:ems="10"
                    android:hint="@string/lbl_prompt_user_name"
                    android:imeOptions="actionNext"
                    android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llClinicName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llUserName"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="bottom"
                    android:src="@mipmap/user_name"
                    android:visibility="invisible" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/lblUserName"
                    style="@style/header_style"
                    android:layout_marginLeft="10dp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>